# blockchain

./: .gitignore  8000  8001  8001_blockchain  Cargo.toml  README.md
.github/workflows/: build-cargo.yml
src/: encoder.rs  leader_discoverer.rs  leader_down.rs  leader_down_handler.rs  main.rs  node.rs  stdin_reader.rs
src/(deprecated)coordinator/: coordinator.rs
src/(deprecated)node/blockchain/: record.rs  world_state.rs
src/blockchain/: block.rs  blockchain.rs  mod.rs  record.rs  student.rs  world_state.rs
src/client/: client.rs
src/common/: coordinator.rs  mod.rs  mutex.rs  node.rs  socket.rs
src/coordinator/: coordinator.rs  main.rs  mod.rs  node_accepted.rs
src/node/: (draft)blockchain.rs  blockchain.rs  encoder.rs  main.rs  messages.rs  mod.rs  node.rs  node_leader.rs  node_non_leader.rs
src/node/blockchain/: block.rs  blockchain.rs  record.rs  student.rs  world_state.rs
src/refactored_app/: main.rs  node.rs
src/refactored_app/blockchain/: block.rs  blockchain.rs
src/utils/: logger.rs  messages.rs  mod.rs  socket.rs  socket_with_timeout.rs
