[package]
name = "blockchain"
version = "0.1.0"
authors = ["Grupo 2"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "coordinator"
path = "src/coordinator/main.rs"

[[bin]]
name = "node"
path = "src/node/main.rs"
